Refactor: Centralize paths and fix ghost audio leaks